--- a/index.html
+++ b/index.html
@@ -1,162 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza Hub</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
 </head>
 
-<body><div class="landing">
-    <img src="images/logo/logo.png" alt="logo" id="logo">
-    <h1>WELCOME</h1>
-    <h1> TO DELANI STUDIO</h1>
-    <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-    <div class="mouse-click"></div>
-    <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a>
-  </div>
-  <div class="container about" id="about-us">
-    <h2 id="about">ABOUT US</h2>
-    <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development
-      process are intergrated , interactive and agile.</p>
-    <p>Our approach unifies design, development and product managent to create exceptional products.</p>
-    <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
-    <p>we help translate them into active and elegant solutions.</p>
-  </div>
-  <div class="services">
-    <div id="servicesoverlay">
-      <h2>SERVICES</h2>
-      <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand
-        your product vission.</p>
-      <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
-      <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
-    </div>
-  </div>
-  <div class="container what-we-do">
-    <h2 class="headings">WHAT WE DO</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div id="design">
-          <h2 class="title">DESIGN</h2>
-          <p>Our design practice offers a full range of services including brand strategy, interaction and visual design
-            and user experience testing.</p>
-          <p>Throughout your project, our designers create and implement visual design and workflows, solicit user
-            feedback and work with you to make sure what gets built is what is needed.</p>
+<body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"><em>Pizzahub</em></a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#menu">Hub Menu</a></li>
+                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+            <button class="btn btn-danger navbar-btn"><a href="#make-order"></a>Order</button>
         </div>
-        <div id="design-image">
-          <img src="images/services_icons/design_icon.png" alt="design">
-          <p>DESIGN</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div id="development">
-          <h2 class="title">DEVELOPMENT</h2>
-          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-          <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as
-            test-driven development and pair programming.</p>
-        </div>
-        <div id="development-image">
-          <img src="images/services_icons/dev_icon.png" alt="development">
-          <P>DEVELOPMENT</P>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div id="product">
-          <h2 class="title">PRODUCT MANAGEMENT</h2>
-          <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-          <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as
-            test-driven development and pair programming.</p>
-        </div>
-        <div id="product-image">
-          <img src="images/services_icons/product_icon.png" alt="products">
-          <P>PRODUCT MANAGEMENT</P>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="portfolio">
-    <h2>PORTFOLIO</h2>
-    <div class="row" id="portfolio">
-      <div class="col-md-3" id="work1">
-        <img src="images/portfolio/work4.jpg" alt="work1">
-        <p id="overlay" class="text">Black Studio</p>
-      </div>
-      <div class="col-md-3" id="work2">
-        <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
-        <p id="overlay2" class="text">Ontario Security</p>
-      </div>
-      <div class="col-md-3" id="work3">
-        <img src="images/portfolio/work2.jpg" alt="work3">
-        <p id="overlay3" class="text">Pyramids</p>
-      </div>
-      <div class="col-md-3" id="work4">
-        <img src="images/portfolio/work1.jpg" alt="work4">
-        <p id="overlay4" class="text">Jim Carry</p>
-      </div>
-    </div>
-    <div class="row" id="portfolio">
-      <div class="col-md-3" id="work5">
-        <img src="images/portfolio/work5.jpg" alt="work1">
-        <p id="overlay5" class="text">Have A Nice Day</p>
-      </div>
-      <div class="col-md-3" id="work6">
-        <img src="images/portfolio/work6.jpg" alt="work2">
-        <p id="overlay6" class="text">Calculator</p>
-      </div>
-      <div class="col-md-3" id="work7">
-        <img src="images/portfolio/work7.jpg" alt="work3">
-        <p id="overlay7" class="text">Burned</p>
-      </div>
-      <div class="col-md-3" id="work8">
-        <img src="images/portfolio/work8.jpg" alt="work4">
-        <p id="overlay8" class="text">Giraffe Restaurant</p>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid contact">
-    <h2>CONTACT US</h2>
+    </nav>
 
-    <form id="form34A" action="http://eepurl.com/hBS3dz" method="POST">
-      <input type="hidden" name="u" value="">
-      <input type="hidden" name="id" value="">
-      <div class="form-group form-inline">
-        <input type="text" class="form-control" placeholder="Name...." name="MERGE1" id="MERGE1" size="25" value="">
-        <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off"
-          name="MERGE0" id="MERGE0" size="25" value="">
-      </div>
-      <div class="form-group">
-        <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary col-md-1">Submit</button>
-    </form>
-  </div>
-  <footer>
-    <img src="images/social_icons/twitter.png" alt="twitter">
-    <img src="images/social_icons/dribble.png" alt="dribble">
-    <img src="images/social_icons/facebook.png" alt="facebook">
-    <img src="images/social_icons/g_plus.png" alt="g_plus">
-    <img src="images/social_icons/skype.png" alt="skype">
-    <img src="images/social_icons/stumble_upon.png" alt="stumble_upon">
-    <img src="images/social_icons/behance.png" alt="behance">
-    <img src="images/social_icons/pinterest.png" alt="pinterest">
-    <img src="images/social_icons/flickr.png" alt="flickr">
-    <!-- <img src="images/social_icons/you_tube.png" alt="">--> 
-    <p>DELANI STUDIO</p>
-    <p>2021</p>
-  </footer>
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
-    data-dojo-config="usePlainJson: true, isDebug: false"></script>
-  <script
-    type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function (L) { L.start({ "baseUrl": "mc.us3.list-manage.com", "uuid": "e71bed4d6ae5a7c984dfe28b0", "lid": "dbf7e27685", "uniqueMethods": true }) })</script>
-  <script src="./js/jquery.js"></script>
-  <script src="./js/script.js"></script>
-</body>
+    <div class="landing">
+        <h1>WELCOME TO</h1>
+        <h1><strong> PIZZA HUB</strong></h1>
+    </div>
 
-</html>
+    <div class="container">
+        <div class="container about" id="about-us">
+            <div class="bg-text">
+                <p>The homemade pizza dough is produced in-house daily and is another reason why the pizza at Pizza Hub always tastes better.</p>
+                <p>The Twisty Bread, the signature Wingz and the delicious Double Meal are additional value-for-money options</p>
+                <p>that keep our satisfied customers coming back time after time.</p>
+                <p>These are the meals that have made our Terrific Tuesday everyone’s favorite day of the week.</p>
+                <p>When entertaining, a Hawaiian pizza, a Regina pizza, or a Peri Peri Chicken pizza from Pizza Hub is the obvious and perfect option to please crowds of all ages. </p>
+            </div>
+        </div>
+    </div>
 
- 
+    <div class="menu">
+        <h2>PIZZA VARIETY</h2><br>
+        <img src="img/top.jpg" alt="pizza price" height='800' width='1200'>
+    </div>
 
+    <div class="container-fluid order" id="make-order">
+        <div class="order-overlay">
+            <div class="controls-top text-center" id="Order-now">
+                <h2>Order Here</h2>
+            </div>
+            <h2>Order your pizza here and we will deliver it to you at your door step!</h2>
+            <div class="row">
+                <div class="col-sm-5">
+                    <form action="">
+                        <label for="select">Select Your Flavor</label>
+                        <select class="browser-default custom-select custom-select-md mb-3 name">
+                        <option value="Chicken Tikka">Chicken Tikka</option>
+                        <option value="PeriPeri Pizza">PeriPeri Pizza</option>
+                        <option value="Raspberry Dessert Pizza">Raspberry Dessert Pizza</option>
+                        <option value="Chicken Alfredo Pizza">Chicken Alfredo Pizza</option>
+                        <option value="Sunchoke Pizza">Sunchoke Pizza</option>
+                        <option value="Buffalo Chicken Sticks">Buffalo Chicken Sticks</option>
+                      </select>
+                        <label for="select">Select Size</label>
+                        <select class="browser-default custom-select custom-select-md mb-3" id="size">
+                      <option selected value="0">Select size here</option>
+                      <option value="large">Large -- sh. 1050</option>
+                      <option value="medium">Medium -- sh. 830</option>
+                      <option value="small">Small -- sh. 550</option>
+                    </select>
+                        <label for="crust">Choose your favorite Crust!</label>
+                        <select class="browser-default custom-select custom-select-md mb-3" id="crust">
+                          <option selected value="0">Select your preferred crust!</option>
+                        <option value="Crispy">Crispy -- sh. 200</option>
+                        <option value="Stuffed">Stuffed -- sh. 150</option>
+                        <option value="Gluten-free">Gluten-free-- sh. 180</option>
+                      </select>
+                        <label for="Toppings">Select Your Toppings at sh. 50 each</label><br>
+                        <div class="custom-control custom-checkbox custom-control-inline">
+                            <input type="checkbox" class="custom-control-input" id="Sausage" value="Sausage" name="toppings">
+                            <label class="custom-control-label" for="Sausage">Sausage</label>
+                        </div>
+                        <div class="custom-control custom-checkbox custom-control-inline">
+                            <input type="checkbox" class="custom-control-input" id="Bacon" value="Bacon" name="toppings">
+                            <label class="custom-control-label" for="Bacon">Bacon</label>
+                        </div>
+                        <div class="custom-control custom-checkbox custom-control-inline">
+                            <input type="checkbox" class="custom-control-input" id="Mushrooms" value="Mushrooms" name="toppings">
+                            <label class="custom-control-label" for="Mushrooms">Mushrooms</label>
+                        </div>
+                        <br><br>
+                        <button type="submit" class="btn btn-orange proceed">Proceed</button>
+
+                    </form>
+                </div>
+                <div class="col-sm-7">
+                    <div id="information">
+                        <p>Your order will be processed and delivered within one hour of placing.</p>
+                        <p>Make sure you have the total amout for the order during order delivery delivery.</p>
+                        <p>Incase of any comment of complaint, Please reach out to us as fast as possible.</p>
+                        <p id="regards">Regards, Management</p>
+                    </div>
+                    <div class="choice">
+                        <h2>Your Order is:</h2>
+                        <div id="your-orders">
+                            <table class="table table-sm  pizzatable">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Size</th>
+                                        <th scope="col">Crust</th>
+                                        <th scope="col">Topping</th>
+                                        <th scope="col">Total</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="ordersmade">
+                                    <tr>
+                                        <td id="pizzaname"></td>
+                                        <td id="pizzasize"></td>
+                                        <td id="pizzacrust"></td>
+                                        <td id="pizzatopping"></td>
+                                        <td id="totals"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <p id="pizzatotal"></p>
+                            <p id="totalbill"></p>
+                            <p id="addedprice">Delivery will cost sh. 150</p>
+                            <p id="finalmessage"></p>
+                        </div>
+                        <!-- <button class="btn btn-orange addPizza">Add Pizza</button>
+                        <button class="btn btn-orange" id="checkout">Checkout</button>
+                        <button class="btn btn-orange deliver">Home delivery?</button> -->
+                    </div>
+                    <div class="delivery">
+                        <form action="">
+                            <div class="form-group">
+                                <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+                                <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
+                                <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
+                                <button class="btn btn-orange" id="final-order">Place Order</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid contact">
+        <div id="contact">
+            <h2>CONTACT US</h2>
+            <p><strong>Contact us to make an order:</strong><em> +254 702363504</em></p>
+            <p>Email:<span>joeljoash@gmail.com</span></p>
+        </div>
+    </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
