--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-to">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#"><em>Pizzahub</em></a>
