--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="landing">
         <h1>WELCOME TO</h1>
-        <h1><strong> PIZZA HU</strong></h1>
+        <h1><strong> PIZZA HUB</strong></h1>
     </div>
 
     <div class="container">
