--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="menu">
-        <h2>PIZZA VARIETY</h2><br>
+        <h2>PIZZA VARIET</h2><br>
         <img src="img/top.jpg" alt="pizza price" height='800' width='1200'>
     </div>
 
