--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <div class="container-fluid contact">
         <div id="contact">
-            <h2>CONTACT U</h2>
+            <h2>CONTACT US</h2>
             <p><strong>Contact us to make an order:</strong><em> +254 702363504</em></p>
             <p>Email:<span>joeljoash@gmail.com</span></p>
         </div>
